--- a/ComputerShareCTCore/Views/Home/Index.cshtml
+++ b/ComputerShareCTCore/Views/Home/Index.cshtml
@@ -1,8 +1,28 @@
-﻿@{
+﻿@model HomeViewModel
+
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
+@if (TempData["Error"] != null)
+{
+    <div class="bg bg-warning">
+        <p class="text-danger text-center">@TempData["Error"]</p>
+    </div>
+}
+
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Stock Trade Reviewer</h1>
 </div>
+
+<div>
+    <form method="post" asp-controller="Home" asp-action="ImportFile" enctype="multipart/form-data">
+        <input asp-for="MyFile" type="file" />
+        <button type="submit" class="btn btn-primary">Upload File</button>
+    </form>
+</div>
+
+
+
+
