--- a/ComputerShareCTCore/Views/Home/ImportFile.cshtml
+++ b/ComputerShareCTCore/Views/Home/ImportFile.cshtml
@@ -2,9 +2,12 @@
 
 <div class="col-12 d-flex justify-content-center">
 
-    <p>Buy Date = @Model.MinDate </p>
-    <p>Buy Price = @Model.MinPrice </p>
-    <p>Sell Date = @Model.MaxDate </p>
-    <p>Sell Price = @Model.MaxPrice </p>
+    <p>
+        Buy Date = @Model.MinDate <br>
+        Buy Price = @Model.MinPrice <br>
+        Sell Date = @Model.MaxDate <br>
+        Sell Price = @Model.MaxPrice <br>
+    </p>
+    
 
 </div>
